# homemade-risc-v-64-vector-linux-emulator

./: .clang-format  .gitignore  AGENTS.md  AGENTS.zh.md  CMakeLists.txt  LICENSE  LINUX_BOOT_FLOW.md  LINUX_BOOT_FLOW.zh.md  README.md  README.zh.md  run_all_logs.sh
.github/workflows/: docs-pages.yml
artifacts/logs/: qemu-virt-reference.dtb
cmake/: CompilerWarnings.cmake
docs/: RESULT.md  RESULT.zh.md  linux-boot-flow-analysis.md  linux-boot-flow-analysis.zh.md  linux-runbook.md  linux-runbook.zh.md  quickstart.md  third-party.md  third-party.zh.md
docs-site/: README.md  build.sh  mkdocs.yml
docs-site/docs/en/: index.md
docs-site/docs/en/docs/: RESULT.md  linux-boot-flow-analysis.md  linux-runbook.md  quickstart.md  third-party.md
docs-site/docs/en/docs-site/: github_action_prd.md  mkdocs_prd.md
docs-site/docs/en/project/: LINUX_BOOT_FLOW.md
docs-site/docs/en/specs/: 00-product-overview.md  01-architecture.md  02-cpu-privilege-csr.md  03-instruction-set.md  04-vector-extension-rvv.md  05-memory-mmu-sv39.md  06-bus-mmio.md  07-interrupt-clint-plic.md  08-uart-console.md  09-virtio-common.md  10-virtio-block.md  11-virtio-network.md  12-boot-firmware-linux.md  13-cli-runtime.md  14-host-network-setup.md  15-error-trap-handling.md  16-testing-verification.md  17-coding-standards.md  18-dependency-artifact-policy.md  19-implementation-roadmap.md  README.md  constitution.md  project-tree.md  standards-baseline.md  tasks.md
docs-site/docs/en/tests/act4/: README.md
docs-site/docs/zh/: index.zh.md
docs-site/docs/zh/docs/: RESULT.zh.md  linux-boot-flow-analysis.zh.md  linux-runbook.zh.md  quickstart.zh.md  third-party.zh.md
docs-site/docs/zh/docs-site/: github_action_prd.zh.md  mkdocs_prd.zh.md
docs-site/docs/zh/project/: AGENTS.zh.md  LINUX_BOOT_FLOW.zh.md  README.zh.md
docs-site/docs/zh/specs/: 00-product-overview.zh.md  01-architecture.zh.md  02-cpu-privilege-csr.zh.md  03-instruction-set.zh.md  04-vector-extension-rvv.zh.md  05-memory-mmu-sv39.zh.md  06-bus-mmio.zh.md  07-interrupt-clint-plic.zh.md  08-uart-console.zh.md  09-virtio-common.zh.md  10-virtio-block.zh.md  11-virtio-network.zh.md  12-boot-firmware-linux.zh.md  13-cli-runtime.zh.md  14-host-network-setup.zh.md  15-error-trap-handling.zh.md  16-testing-verification.zh.md  17-coding-standards.zh.md  18-dependency-artifact-policy.zh.md  19-implementation-roadmap.zh.md  README.zh.md  constitution.zh.md  project-tree.zh.md  standards-baseline.zh.md  tasks.zh.md
docs-site/docs/zh/tests/act4/: README.zh.md
docs-site/scripts/: check_docs.py
docs-site/specs/: github_action_prd.md  github_action_prd.zh.md  mkdocs_prd.md
include/rvemu/bus/: access.hpp  address_map.hpp  address_range.hpp  address_region.hpp  bus.hpp  physical_address.hpp
include/rvemu/conformance/: elf_loader.hpp
include/rvemu/core/: compressed_decoder.hpp  cpu.hpp  cpu_state.hpp  csr.hpp  decoder.hpp  floating_state.hpp  instruction.hpp  integer_a.hpp  integer_m.hpp  soft_float.hpp  trap.hpp
include/rvemu/devices/: clint.hpp  plic.hpp  uart16550.hpp  virtio_block.hpp  virtio_mmio.hpp  virtqueue.hpp
include/rvemu/memory/: boot_rom.hpp  mmu.hpp  physical_memory.hpp
include/rvemu/platform/: disk_backend.hpp  terminal.hpp
include/rvemu/runtime/: boot.hpp  cli.hpp  event_loop.hpp  fdt.hpp  host_signal.hpp  machine.hpp  runner.hpp
include/rvemu/vector/: vector_configuration.hpp  vector_floating.hpp  vector_integer.hpp  vector_memory.hpp  vector_register_group.hpp  vector_state.hpp
specs/: 00-product-overview.md  01-architecture.md  02-cpu-privilege-csr.md  02-cpu-privilege-csr.zh.md  03-instruction-set.md  04-vector-extension-rvv.md  04-vector-extension-rvv.zh.md  05-memory-mmu-sv39.md  06-bus-mmio.md  07-interrupt-clint-plic.md  08-uart-console.md  08-uart-console.zh.md  09-virtio-common.md  10-virtio-block.md  11-virtio-network.md  12-boot-firmware-linux.md  12-boot-firmware-linux.zh.md  13-cli-runtime.md  14-host-network-setup.md  14-host-network-setup.zh.md  15-error-trap-handling.md  16-testing-verification.md  17-coding-standards.md  18-dependency-artifact-policy.md  19-implementation-roadmap.md  19-implementation-roadmap.zh.md  README.md  README.zh.md  constitution.md  constitution.zh.md  project-tree.md  standards-baseline.md  standards-baseline.zh.md  tasks.md  tasks.zh.md
src/: main.cpp
src/bus/: address_range.cpp  bus.cpp
src/conformance/: elf_loader.cpp  main.cpp
src/core/: compressed_decoder.cpp  cpu.cpp  cpu_floating.cpp  cpu_state.cpp  csr.cpp  decoder.cpp  floating_state.cpp  integer_a.cpp  integer_m.cpp  soft_float_arithmetic.cpp  soft_float_conversion.cpp  soft_float_internal.hpp
src/devices/: clint.cpp  plic.cpp  uart16550.cpp  virtio_block.cpp  virtio_mmio.cpp  virtqueue.cpp
src/memory/: boot_rom.cpp  mmu.cpp  physical_memory.cpp
src/platform/: disk_backend.cpp  terminal.cpp
src/runtime/: boot.cpp  cli.cpp  event_loop.cpp  fdt.cpp  host_signal.cpp  machine.cpp  runner.cpp
src/vector/: vector_configuration.cpp  vector_floating.cpp  vector_integer.cpp  vector_memory.cpp  vector_register_group.cpp  vector_state.cpp
tests/: CMakeLists.txt
tests/conformance/act4/: README.md  README.zh.md  link.ld  rvemu-rv64imafdc.yaml  rvmodel_macros.h  rvtest_config.h  rvtest_config.svh  sail.json  test_config.yaml
tests/unit/: test_boot_runtime.cpp  test_bus_memory.cpp  test_clint.cpp  test_cpu_a.cpp  test_cpu_compressed.cpp  test_cpu_floating.cpp  test_cpu_m.cpp  test_cpu_privilege.cpp  test_cpu_rv64i.cpp  test_cpu_vector_configuration.cpp  test_cpu_vector_floating.cpp  test_cpu_vector_integer.cpp  test_cpu_vector_memory.cpp  test_cpu_vector_rvv_boundaries.cpp  test_elf_loader.cpp  test_event_loop.cpp  test_floating_state.cpp  test_mmu.cpp  test_plic.cpp  test_soft_float.cpp  test_terminal.cpp  test_uart16550.cpp  test_vector_register_group.cpp  test_vector_state.cpp  test_virtio_block.cpp  test_virtio_common.cpp
tools/conformance/: fetch-act4.sh  run-act4.sh
