# 文件职责：构建并注册物理总线与内存模块的真实组件测试。
# 边界：测试目标只调用生产库，不编译 Mock、Stub 或另一套硬件实现。

add_executable(rvemu_bus_memory_tests
    unit/test_bus_memory.cpp
)

target_link_libraries(rvemu_bus_memory_tests PRIVATE rvemu_bus_memory)
target_compile_features(rvemu_bus_memory_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_bus_memory_tests)

add_test(NAME rvemu.bus_memory COMMAND rvemu_bus_memory_tests)

add_executable(rvemu_mmu_tests
    unit/test_mmu.cpp
)

target_link_libraries(rvemu_mmu_tests PRIVATE rvemu_core)
target_compile_features(rvemu_mmu_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_mmu_tests)

add_test(NAME rvemu.mmu COMMAND rvemu_mmu_tests)

add_executable(rvemu_cpu_rv64i_tests
    unit/test_cpu_rv64i.cpp
)

target_link_libraries(rvemu_cpu_rv64i_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_rv64i_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_rv64i_tests)

add_test(NAME rvemu.cpu_rv64i COMMAND rvemu_cpu_rv64i_tests)

add_executable(rvemu_cpu_privilege_tests
    unit/test_cpu_privilege.cpp
)

target_link_libraries(rvemu_cpu_privilege_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_privilege_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_privilege_tests)

add_test(NAME rvemu.cpu_privilege COMMAND rvemu_cpu_privilege_tests)

add_executable(rvemu_vector_state_tests
    unit/test_vector_state.cpp
)

target_link_libraries(rvemu_vector_state_tests PRIVATE rvemu_core)
target_compile_features(rvemu_vector_state_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_vector_state_tests)

add_test(NAME rvemu.vector_state COMMAND rvemu_vector_state_tests)

add_executable(rvemu_cpu_vector_configuration_tests
    unit/test_cpu_vector_configuration.cpp
)

target_link_libraries(rvemu_cpu_vector_configuration_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_vector_configuration_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_vector_configuration_tests)

add_test(NAME rvemu.cpu_vector_configuration COMMAND rvemu_cpu_vector_configuration_tests)

add_executable(rvemu_vector_register_group_tests
    unit/test_vector_register_group.cpp
)

target_link_libraries(rvemu_vector_register_group_tests PRIVATE rvemu_core)
target_compile_features(rvemu_vector_register_group_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_vector_register_group_tests)

add_test(NAME rvemu.vector_register_group COMMAND rvemu_vector_register_group_tests)

add_executable(rvemu_cpu_vector_memory_tests
    unit/test_cpu_vector_memory.cpp
)

target_link_libraries(rvemu_cpu_vector_memory_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_vector_memory_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_vector_memory_tests)

add_test(NAME rvemu.cpu_vector_memory COMMAND rvemu_cpu_vector_memory_tests)

add_executable(rvemu_cpu_vector_integer_tests unit/test_cpu_vector_integer.cpp)
target_link_libraries(rvemu_cpu_vector_integer_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_vector_integer_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_vector_integer_tests)
add_test(NAME rvemu.cpu_vector_integer COMMAND rvemu_cpu_vector_integer_tests)

add_executable(rvemu_cpu_vector_floating_tests unit/test_cpu_vector_floating.cpp)
target_link_libraries(rvemu_cpu_vector_floating_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_vector_floating_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_vector_floating_tests)
add_test(NAME rvemu.cpu_vector_floating COMMAND rvemu_cpu_vector_floating_tests)

add_executable(rvemu_cpu_vector_rvv_boundaries_tests unit/test_cpu_vector_rvv_boundaries.cpp)
target_link_libraries(rvemu_cpu_vector_rvv_boundaries_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_vector_rvv_boundaries_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_vector_rvv_boundaries_tests)
add_test(NAME rvemu.cpu_vector_rvv_boundaries COMMAND rvemu_cpu_vector_rvv_boundaries_tests)

add_executable(rvemu_clint_tests
    unit/test_clint.cpp
)

target_link_libraries(rvemu_clint_tests PRIVATE rvemu_devices)
target_compile_features(rvemu_clint_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_clint_tests)

add_test(NAME rvemu.clint COMMAND rvemu_clint_tests)

add_executable(rvemu_plic_tests unit/test_plic.cpp)
target_link_libraries(rvemu_plic_tests PRIVATE rvemu_devices)
target_compile_features(rvemu_plic_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_plic_tests)
add_test(NAME rvemu.plic COMMAND rvemu_plic_tests)

add_executable(rvemu_cpu_m_tests
    unit/test_cpu_m.cpp
)

target_link_libraries(rvemu_cpu_m_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_m_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_m_tests)

add_test(NAME rvemu.cpu_m COMMAND rvemu_cpu_m_tests)

add_executable(rvemu_cpu_a_tests
    unit/test_cpu_a.cpp
)

target_link_libraries(rvemu_cpu_a_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_a_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_a_tests)

add_test(NAME rvemu.cpu_a COMMAND rvemu_cpu_a_tests)

add_executable(rvemu_floating_state_tests
    unit/test_floating_state.cpp
)

target_link_libraries(rvemu_floating_state_tests PRIVATE rvemu_core)
target_compile_features(rvemu_floating_state_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_floating_state_tests)

add_test(NAME rvemu.floating_state COMMAND rvemu_floating_state_tests)

add_executable(rvemu_soft_float_tests
    unit/test_soft_float.cpp
)

target_link_libraries(rvemu_soft_float_tests PRIVATE rvemu_core)
target_compile_features(rvemu_soft_float_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_soft_float_tests)

add_test(NAME rvemu.soft_float COMMAND rvemu_soft_float_tests)

add_executable(rvemu_cpu_floating_tests
    unit/test_cpu_floating.cpp
)

target_link_libraries(rvemu_cpu_floating_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_floating_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_floating_tests)

add_test(NAME rvemu.cpu_floating COMMAND rvemu_cpu_floating_tests)

add_executable(rvemu_cpu_compressed_tests
    unit/test_cpu_compressed.cpp
)

target_link_libraries(rvemu_cpu_compressed_tests PRIVATE rvemu_core)
target_compile_features(rvemu_cpu_compressed_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_cpu_compressed_tests)

add_test(NAME rvemu.cpu_compressed COMMAND rvemu_cpu_compressed_tests)

add_executable(rvemu_elf_loader_tests
    unit/test_elf_loader.cpp
)

target_link_libraries(rvemu_elf_loader_tests PRIVATE rvemu_conformance)
target_compile_features(rvemu_elf_loader_tests PRIVATE cxx_std_17)
rvemu_enable_strict_warnings(rvemu_elf_loader_tests)

add_test(NAME rvemu.elf_loader COMMAND rvemu_elf_loader_tests)
